<resources>
    <string name="app_name">OnlineStoreApp</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="shop">Shop</string>
    <string name="discount">Discounts</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="mask">mask</string>
    <string name="suntan">suntan</string>
    <string name="body">body</string>
    <string name="face">face</string>
    <string name="see_all">see all</string>
    <string name="favourite">Favourite</string>
    <string name="products_big">Products</string>
    <string name="brands">Brands</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="surname">Surname</string>
    <string name="login">Login</string>
    <string name="entrance">Entrance</string>
    <string name="error">Use only russian letters</string>
    <string name="accept_terms">By clicking the \"Login\" button, you accept the <u> terms of the loyalty program </u></string>
    <string name="add_to_cart">Add to cart</string>
    <string name="characteristics">Characteristics</string>
    <string name="description">Description</string>
    <string name="hide">Hide</string>
    <string name="more">More info</string>
    <string name="enter">Login</string>
    <string name="composition">Composition</string>
    <string name="by_popularity">By popularity</string>
    <string name="by_price">By price reduction</string>
    <string name="by_ascending_price">Ascending price</string>
    <string name="thing">thing</string>
    <string name="things">things</string>
    <string name="thingses">things</string>
    <string name="review">review</string>
    <string name="reviews">reviews</string>
    <string name="reviewes">reviews</string>
    <string name="text_stars">%1$s · %2$s</string>
    <string name="counter">(%d)</string>
    <string name="discount_procent">-%d%%</string>
    <string name="line"> Not crossed <strike> crossed </strike> </string>
    <string name="available_for_order">Available for order %1$d %2$s</string>
    <string name="filters">Filters</string>
    <string name="product">product</string>
    <string name="products">products</string>
    <string name="productes">products</string>
    <string name="shops">Shops</string>
    <string name="feedback">Feedback</string>
    <string name="offer">Offer</string>
    <string name="purchase_returns">Purchase returns</string>
    <string name="exit">Exit</string>
</resources>