<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Catalog">

    <fragment
        android:id="@+id/Catalog"
        android:name="com.example.onlinestoreapp.presentation.catalog.CatalogFragment"
        android:label="@string/catalog">
        <action
            android:id="@+id/action_Catalog_to_productFragment"
            app:destination="@id/productFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/Discount"
        android:name="com.example.onlinestoreapp.presentation.discount.DiscountsFragment"
        android:label="@string/discount" />
    <fragment
        android:id="@+id/Home"
        android:name="com.example.onlinestoreapp.presentation.home.HomeFragment"
        android:label="@string/home" />
    <fragment
        android:id="@+id/Profile"
        android:name="com.example.onlinestoreapp.presentation.profile.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_Profile_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
        <action
            android:id="@+id/action_Profile_to_registrationFragment"
            app:destination="@id/registrationFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/Profile"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/Shop"
        android:name="com.example.onlinestoreapp.presentation.shop.ShopFragment"
        android:label="@string/shop" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.onlinestoreapp.presentation.catalog.ProductFragment"
        android:label="" >
        <argument
            android:name="productIndex"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.onlinestoreapp.presentation.profile.FavouriteFragment"
        android:label="@string/favourite" >
        <action
            android:id="@+id/action_favouriteFragment_to_productFragment"
            app:destination="@id/productFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"

        android:name="com.example.onlinestoreapp.presentation.registration.RegistrationFragment"
        android:label="@string/entrance">
        <action
            android:id="@+id/action_registrationFragment_to_Catalog2"
            app:destination="@id/Catalog"
            app:enterAnim="@android:anim/fade_out"
            app:launchSingleTop="true"
            app:popUpTo="@id/registrationFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>