<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLiked"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_heart_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonInfo"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_info_24"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewProduct"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"

                android:textStyle="normal"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                tools:text="@string/shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

            <TextView
                android:id="@+id/textViewSubtitle"
                android:layout_width="0dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                tools:text="@string/shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/textviewTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:paddingTop="10dp"
                tools:text="@string/shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSubtitle" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewTotal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stars"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/textviewZaglushka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                tools:text="@string/shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stars" />

            <TextView
                android:id="@+id/textviewHeaderDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewZaglushka" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBrand"
                style="@style/ButtonChanged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="@string/shop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewHeaderDescription" />


            <include
                android:id="@+id/textDescription"
                layout="@layout/collapsed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonBrand" />

            <TextView
                android:id="@+id/textviewHeaderCharacteristics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:gravity="start"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/characteristics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCharacteristics"
                android:layout_width="match_parent"
                tools:listitem="@layout/item_characteristics"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewHeaderCharacteristics" />
            <TextView
                android:id="@+id/textviewHeaderComposition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:gravity="start"
                android:text="@string/composition"
                app:layout_constraintEnd_toEndOf="@+id/buttonCopy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewCharacteristics" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCopy"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_copy_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewCharacteristics" />

            <include
                android:id="@+id/textComposition"
                layout="@layout/collapsed_text"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewHeaderComposition" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:layout_gravity="bottom"
        app:cornerRadius="8dp"
        android:text="@string/add_to_cart" />
</FrameLayout>